--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>octomap_handlers_pkg</name>
+  <name>octomap_handlers</name>
   <version>0.0.1</version>
   <description>Various utilities for handling octomaps statically and on the fly</description>
 
